[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/settings_dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/runtime/network_manager.gd" type="Script" id=2]
[ext_resource path="res://src/runtime/main.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/dokyo.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://assets/ui/rpgiab_icon_pack_v1.2/16x16/folder_page.png" type="Texture" id=5]
[ext_resource path="res://src/runtime/world.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ui/rpgiab_icon_pack_v1.2/16x16/play.png" type="Texture" id=7]
[ext_resource path="res://src/runtime/ui.gd" type="Script" id=8]

[sub_resource type="World" id=3]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="NetworkManagerENet" type="Node" parent="."]
script = ExtResource( 2 )
address_bar = NodePath("../UI/TopBar/AddressBar")
world = NodePath("../UI/ViewportContainer/WorldViewport/World")
ui_node = NodePath("../UI")

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="ViewportContainer" type="ViewportContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 60.0
margin_bottom = -40.0
stretch = true

[node name="WorldViewport" type="Viewport" parent="UI/ViewportContainer"]
size = Vector2( 1024, 500 )
world = SubResource( 3 )
handle_input_locally = false
render_target_update_mode = 3

[node name="World" parent="UI/ViewportContainer/WorldViewport" instance=ExtResource( 6 )]
master_node = NodePath("../../../..")

[node name="TopBar" type="Panel" parent="UI"]
anchor_right = 1.0
margin_bottom = 60.0

[node name="Menubar" type="HBoxContainer" parent="UI/TopBar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 9.0
margin_top = -16.0
margin_right = 119.0
margin_bottom = 17.0

[node name="MenuButtonGame" type="MenuButton" parent="UI/TopBar/Menubar"]
margin_right = 50.0
margin_bottom = 33.0
text = "Game"
items = [ "Find Game", null, 0, false, false, 0, 0, null, "", false, "Create Game", null, 0, false, false, 1, 0, null, "", false ]
switch_on_hover = true

[node name="MenuButtonTools" type="MenuButton" parent="UI/TopBar/Menubar"]
margin_left = 54.0
margin_right = 100.0
margin_bottom = 33.0
focus_mode = 2
text = "Tools"
items = [ "Settings", null, 0, false, false, 1, 0, null, "", false ]
switch_on_hover = true

[node name="AddressBar" type="LineEdit" parent="UI/TopBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -14.5
margin_right = 187.0
margin_bottom = 14.5
align = 1
placeholder_text = "Insert Room Address Here"

[node name="NewRoomDialog" type="WindowDialog" parent="UI"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.5
margin_top = -160.0
margin_right = 210.5
margin_bottom = 160.0
window_title = "Create a Room"

[node name="RoomName" type="LineEdit" parent="UI/NewRoomDialog"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -199.5
margin_top = 15.0
margin_right = 200.5
margin_bottom = 44.0
placeholder_text = "Room Name"

[node name="MapPath" type="LineEdit" parent="UI/NewRoomDialog"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -199.0
margin_top = 52.0
margin_right = 201.0
margin_bottom = 81.0
editable = false
placeholder_text = "Map Path"

[node name="Button" type="Button" parent="UI/NewRoomDialog/MapPath"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -46.0
icon = ExtResource( 5 )
icon_align = 1

[node name="CreateRoomButton" type="Button" parent="UI/NewRoomDialog"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -66.0
margin_top = -43.0
margin_right = -9.0
margin_bottom = -14.0
text = "Create"
icon_align = 1

[node name="Bottombar" type="Panel" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0

[node name="Label" type="Label" parent="UI/Bottombar"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -106.0
custom_fonts/font = SubResource( 2 )
text = "sunaba"
align = 1
valign = 1

[node name="RoomControls" type="Control" parent="UI/Bottombar"]
anchor_bottom = 1.0
margin_right = 612.0

[node name="ChatEntry" type="LineEdit" parent="UI/Bottombar/RoomControls"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 4.0
margin_top = -17.0
margin_right = 276.0
margin_bottom = 16.0
placeholder_text = "chatbox"

[node name="PlayButton" type="Button" parent="UI/Bottombar/RoomControls"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 282.0
margin_top = -17.0
margin_right = 339.0
margin_bottom = 16.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
icon_align = 1
expand_icon = true

[node name="FileDialog" type="FileDialog" parent="UI"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.5
margin_top = -186.5
margin_right = 291.5
margin_bottom = 186.5
window_title = "Open a File"
mode = 0
access = 2

[node name="Chatbox" type="RichTextLabel" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 76.0
margin_right = -378.0
margin_bottom = -133.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
scroll_following = true

[node name="SettingsDialog" parent="UI" instance=ExtResource( 1 )]
gui = NodePath("..")

[connection signal="text_entered" from="UI/TopBar/AddressBar" to="NetworkManagerENet" method="_on_address_entered" flags=6]
[connection signal="pressed" from="UI/NewRoomDialog/MapPath/Button" to="UI" method="_on_file_button_pressed"]
[connection signal="pressed" from="UI/NewRoomDialog/CreateRoomButton" to="." method="create_room"]
[connection signal="text_entered" from="UI/Bottombar/RoomControls/ChatEntry" to="." method="_on_chat_text_entered"]
[connection signal="pressed" from="UI/Bottombar/RoomControls/PlayButton" to="UI" method="_on_play_button_pressed" flags=6]
[connection signal="pressed" from="UI/Bottombar/RoomControls/PlayButton" to="UI/ViewportContainer/WorldViewport/World" method="_on_play_button_pressed" flags=6]
[connection signal="file_selected" from="UI/FileDialog" to="UI" method="_on_file_selected"]

[editable path="UI/ViewportContainer/WorldViewport/World"]
